testdata/typechecker/error/Portfolio/Portfolio_classNoImplement.java
interface Car {

}

class RedBicycle{

}

int main(){
    Car vehicle;
    vehicle = new RedBicycle();
    return 0;
}